--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.13.3",
     "express": "^4.13.3",
-    "request": "2.60.0",
-    "keen.io": "0.1.3"
+    "keen.io": "0.1.3",
+    "request": "2.60.0"
   }
 }
